messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
spec:
  replicas: 1  # Une seule instance de l’app
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: django-container
          image: your-dockerhub-username/django-messaging-app:latest
          ports:
            - containerPort: 8000  # Port exposé dans le conteneur
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP  # Reste interne au cluster
